@startuml

title __EVENT's Class Diagram__\n

  package  {
    package servlets.Event {
      class EditEventServlet {
          # doPost()
          # doGet()
      }
    }
  }
  

  package  {
    package servlets.Event {
      class EventServlet {
          {static} - serialVersionUID : long
          # service()
          - verification()
      }
    }
  }
  

  EditEventServlet -up-|> HttpServlet
  EventServlet -up-|> HttpServlet


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
